--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io": "^1.7.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:bot2": "nodemon bot2.js"
   }
 }
