--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-binance-api": "^0.4.8",
     "node-schedule": "^1.3.0",
     "nodemon": "^1.14.11",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "sound-play": "^1.1.0"
   },
   "scripts": {
     "start": "node index.js",
