--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "axios": "^0.21.1",
     "brain.js": "^1.0.3",
+    "coinbase-pro": "^0.9.0",
     "express": "^4.15.2",
     "json2csv": "^3.11.5",
     "lodash": "^4.17.4",
-    "node-binance-api": "^0.4.8",
+    "node-binance-api": "^0.12.5",
     "node-schedule": "^1.3.0",
     "nodemon": "^1.14.11",
     "socket.io": "^1.7.3",
-    "sound-play": "^1.1.0"
+    "sound-play": "^1.1.0",
+    "technicalindicators": "^3.1.0"
   },
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon version3.js"
   }
 }
