--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "@mkt-eg/mkt": "^1.2.6",
     "axios": "^0.21.1",
     "brain.js": "^1.0.3",
     "coinbase-pro": "^0.9.0",
@@ -18,6 +19,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon version3.js"
+    "start:dev": "nodemon version3.js",
+    "mkt": "node mkt.js"
   }
 }
