--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
-    "@mkt-eg/mkt": "^1.2.6",
     "axios": "^0.21.1",
-    "brain.js": "^1.0.3",
-    "coinbase-pro": "^0.9.0",
     "express": "^4.15.2",
     "json2csv": "^3.11.5",
     "lodash": "^4.17.4",
@@ -18,8 +15,7 @@
     "technicalindicators": "^3.1.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon version4.js",
-    "mkt": "node mkt.js"
+    "start": "node version4/version4.js",
+    "start:dev": "nodemon version4/version4.js"
   }
 }
